--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.mvc.view.suffix=.jsp
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #학원
-#spring.datasource.url=jdbc:mysql://localhost:3306/db_220919?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/db_220919?serverTimezone=UTC&characterEncoding=UTF-8
 #집
-spring.datasource.url=jdbc:mysql://localhost:3306/220919?serverTimezone=UTC&characterEncoding=UTF-8
+#spring.datasource.url=jdbc:mysql://localhost:3306/220919?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
