jackson timezone 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_220919?characterEncoding=UT
 #spring.datasource.url=jdbc:mysql://localhost:3306/220919?characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
+
+#jackson timezone 설정
+spring.jackson.deserialization.adjust-dates-to-context-time-zone=false
+spring.jackson.time-zone=Asia/Seoul
